Revert "검객기능 추가"
This reverts commit 1eedeb5e4340db1b586805c65bde18ebf28e13c2.